@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>io.github.tree-sitter</groupId>
 			<artifactId>jtreesitter</artifactId>
-			<version>0.25.1</version>
+			<version>0.25.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -56,10 +56,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>21</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
+					<release>24</release>
                 </configuration>
 			</plugin>
 			<plugin>
